--- a/code/BA - data preparation.Rmd
+++ b/code/BA - data preparation.Rmd
@@ -13,16 +13,9 @@ output:
 
 Input:
 
-* CO2 Emissions per person
-* women in parliament
-* democracy -> only very few years
-* mean years in school -> data on gapminder only until 2009
 
 Output:
-* life expactancy
-* income
-* murder rate
-* employment rate
+
 
 ## load libaries
 
@@ -33,6 +26,23 @@ library(ggplot2)
 library(countrycode)
 ```
 
+women_in_parliament,
+basic_sanitation,
+basic_water_source,
+electricity,
+employment_rate,
+material_footprint,
+forest_area,
+mean_years_in_school,
+air_pollution,
+health_worker,
+red_list,
+poverty,
+life_expactancy,
+income,
+income_share_20,
+CO2,
+murder
 
 ## load data
 
@@ -99,21 +109,35 @@ colnames(air_pollution) <- c("country", "year", "value")
 colnames(red_list) <- c("country", "year", "value")
 ```
 
-## Remove years 1949 and earlier
+## Remove years 1949 and earlier adn 2021 and later
 
-Not necessary, filtered out later anyways
+(Not necessary, filtered out later anyways)
 
 ```{r}
-# drops <- as.character(c(1700:1949, 2021:2200))
-# 
-# CO2 <- CO2[ , !(names(CO2) %in% drops)]
-# women_in_parliament <- women_in_parliament[ , !(names(women_in_parliament) %in% drops)]
-# democracy <- democracy[ , !(names(democracy) %in% drops)]
-# 
-# life_expactancy <- life_expactancy[ , !(names(life_expactancy) %in% drops)]
-# income <- income[ , !(names(income) %in% drops)]
-# murder <- murder[ , !(names(murder) %in% drops)]
-# employment_rate <- employment_rate[ , !(names(employment_rate) %in% drops)]
+drops <- as.character(c(1700:1949, 2021:2200))
+
+# Gapminder
+
+women_in_parliament <- women_in_parliament[ , !(names(women_in_parliament) %in% drops)]
+basic_sanitation <- basic_sanitation[ , !(names(basic_sanitation) %in% drops)]
+basic_water_source <- basic_water_source[ , !(names(basic_water_source) %in% drops)]
+electricity <- electricity[ , !(names(electricity) %in% drops)]
+employment_rate <- employment_rate[ , !(names(employment_rate) %in% drops)]
+material_footprint <- material_footprint[ , !(names(material_footprint) %in% drops)]
+forest_area <- forest_area[ , !(names(forest_area) %in% drops)]
+poverty <- poverty[ , !(names(poverty) %in% drops)]
+life_expactancy <- life_expactancy[ , !(names(life_expactancy) %in% drops)]
+income <- income[ , !(names(income) %in% drops)]
+income_share_20 <- income_share_20[ , !(names(income_share_20) %in% drops)]
+CO2 <- CO2[ , !(names(CO2) %in% drops)]
+murder <- murder[ , !(names(murder) %in% drops)]
+
+# OurWorldInData
+
+mean_years_in_school <- subset(mean_years_in_school, !(year %in% drops))
+air_pollution <- subset(air_pollution, !(year %in% drops))
+health_worker <- subset(health_worker, !(year %in% drops))
+red_list <- subset(red_list, !(year %in% drops))
 
 ```
 
