--- a/code/BA - data preparation.Rmd
+++ b/code/BA - data preparation.Rmd
@@ -315,6 +315,14 @@ Data sets that (as of now) look very promising:
 
 -   CO2
 
+## Attempt 4
+
+| Input | Output |
+|-------|--------|
+|       |        |
+|       |        |
+|       |        |
+
 ## Attempt 3
 
 | Input               | Output          |
@@ -336,9 +344,9 @@ all_data <- list(
   employment_rate
 )
 
-final_8 <- all_data %>% reduce(full_join, by = c("country", "year"))
+final_3 <- all_data %>% reduce(full_join, by = c("country", "year"))
 
-colnames(final_8) <- c(
+colnames(final_3) <- c(
   "country",
   "year",
   "women_in_parliament",
@@ -351,11 +359,11 @@ colnames(final_8) <- c(
   "employment_rate"
 )
 
-final_8 <- as.data.frame(final_8)
+final_3 <- as.data.frame(final_3)
 
-final_8 <- drop_na(final_8)
+final_3 <- drop_na(final_3)
 
-nrow(final_8)
+nrow(final_3)
 ```
 
 -\> 2201 DMUs
@@ -363,39 +371,39 @@ nrow(final_8)
 ### Check for 0 values
 
 ```{r}
-min(final_8$women_in_parliament)
-min(final_8$forest_area)
+min(final_3$women_in_parliament)
+min(final_3$forest_area)
 # min(final$mean_years_in_school)
 # min(final$poverty)
-min(final_8$CO2)
+min(final_3$CO2)
 ```
 
 ```{r}
 print("0 women in parliament:")
-unique(final_8$country[final_8$women_in_parliament <= 0])
+unique(final_3$country[final_3$women_in_parliament <= 0])
 print("0 forest area:")
-unique(final_8$country[final_8$forest_area <= 0])
+unique(final_3$country[final_3$forest_area <= 0])
 ```
 
 Assign very low values where values are 0
 
 ```{r}
-final_8[final_8 == 0] <- 0.0001
+final_3[final_3 == 0] <- 0.0001
 ```
 
 ```{r}
-min(final_8$women_in_parliament)
-min(final_8$forest_area)
+min(final_3$women_in_parliament)
+min(final_3$forest_area)
 # min(final$mean_years_in_school)
 # min(final$poverty)
-min(final_8$CO2)
+min(final_3$CO2)
 ```
 
 ```{r}
-final_8$dmu <- str_c(final_8$country, "_", final_8$year)
-final_8$country <- NULL
-final_8$year <- NULL
-final_8 <- final_8 %>% relocate(dmu)
+final_3$dmu <- str_c(final_3$country, "_", final_3$year)
+final_3$country <- NULL
+final_3$year <- NULL
+final_3 <- final_3 %>% relocate(dmu)
 ```
 
 ### DEA - Attempt 3
@@ -420,16 +428,18 @@ return_to_scale <- "vrs"
 # grs: generalized
 
 
-model_data <- read_data(final_8, ni=number_of_inputs, no=number_of_outputs, dmus = 1)
+model_data <- read_data(final_3, ni=number_of_inputs, no=number_of_outputs, dmus = 1)
 
 
-result <- model_basic(model_data, orientation = orientation, rts=return_to_scale)
+result_8 <- model_basic(model_data, orientation = orientation, rts=return_to_scale)
 
 ```
 
+Calculate efficiencies and target values
+
 ```{r}
 # Efficiencies
-eff <- as.data.frame(efficiencies(result))
+eff <- as.data.frame(efficiencies(result_8))
 # add column for dmu names
 eff$dmu <- rownames(eff)
 # delete rownames
@@ -438,25 +448,69 @@ rownames(eff) <- NULL
 colnames(eff)[1] <- "efficiencies"
 
 # get targets
-targets <- as.data.frame(targets(result))
+targets <- as.data.frame(targets(result_8))
 # add column for dmu names
 targets$dmu <- rownames(targets)
 # delte rownames
 rownames(targets) <- NULL
 ```
 
+Merge efficiencies, targets and the original data into one data fram
+
 ```{r}
 data_and_results <- list(
-  final_8,
+  final_3,
   eff,
   targets
 )
 
-data_dea <- data_and_results %>% reduce(full_join, by="dmu")
+data_dea_3 <- data_and_results %>% reduce(full_join, by="dmu")
+```
+
+Relocate the efficiencies column
+
+```{r}
+data_dea_3 <- data_dea_3 %>% relocate(efficiencies, .after = dmu)
+```
+
+Seperate the DMU column into country and year but keep the dmu column
+
+```{r}
+data_dea_3 <- separate(data_dea_3, dmu, c("country", "year"), "_", remove=FALSE)
+```
+
+Add the continent to each DMU
+
+```{r}
+data_dea_3$continent <- countrycode(sourcevar = data_dea_3$country,
+                               origin = "country.name",
+                               destination = "continent")
+```
+
+### Visualization
+
+```{r}
+data_dea_3 %>%
+  filter(continent == "Africa") %>%
+  ggplot(aes(year, efficiencies))+
+  geom_point(aes(
+    # color=country
+  )
+  )+
+  theme(axis.text.x=element_text(angle = -90, hjust = 0))
 ```
 
 ```{r}
-data_dea <- data_dea %>% relocate(efficiencies, .after = dmu)
+data_dea_3 %>%
+  # filter(continent == "Africa") %>%
+  ggplot(aes(continent, efficiencies))+
+  geom_boxplot()+
+  geom_jitter(width = 0.1,
+              alpha = 0.5,
+              # aes(
+              #   color=year
+              #   )
+              )
 ```
 
 ## Attempt 2
