--- a/code/BA - data preparation.Rmd
+++ b/code/BA - data preparation.Rmd
@@ -168,6 +168,28 @@ CO2 <- CO2 %>% mutate(year = as.numeric(year))
 murder <- murder %>% mutate(year = as.numeric(year))
 ```
 
+## Save individual data sets as csvs
+
+```{r}
+# write_csv(women_in_parliament, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/women_in_parliament.csv")
+# write_csv(basic_sanitation, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/basic_sanitation.csv")
+# write_csv(basic_water_source, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/basic_water_source.csv")
+# write_csv(electricity, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/electricity.csv")
+# write_csv(employment_rate, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/employment_rate.csv")
+# write_csv(material_footprint, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/material_footprint.csv")
+# write_csv(forest_area, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/forest_area.csv")
+# write_csv(mean_years_in_school, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/mean_years_in_school.csv")
+# write_csv(air_pollution, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/air_pollution.csv")
+# write_csv(health_worker, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/health_worker.csv")
+# write_csv(red_list, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/red_list.csv")
+# write_csv(poverty, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/poverty.csv")
+# write_csv(life_expectancy, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/life_expectancy.csv")
+# write_csv(income, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/income.csv")
+# write_csv(income_share_20, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/income_share_20.csv")
+# write_csv(CO2, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/CO2.csv")
+# write_csv(murder, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/murder.csv")
+```
+
 ## General information about data sets
 
 ```{r}
@@ -251,6 +273,27 @@ nrow(CO2),
 nrow(murder)
 )
 
+dps_1990_2020 <- c(
+nrow(subset(women_in_parliament, year %in% c(1990:2020))),
+nrow(subset(basic_sanitation, year %in% c(1990:2020))),
+nrow(subset(basic_water_source, year %in% c(1990:2020))),
+nrow(subset(electricity, year %in% c(1990:2020))),
+nrow(subset(employment_rate, year %in% c(1990:2020))),
+nrow(subset(material_footprint, year %in% c(1990:2020))),
+nrow(subset(forest_area, year %in% c(1990:2020))),
+nrow(subset(mean_years_in_school, year %in% c(1990:2020))),
+nrow(subset(air_pollution, year %in% c(1990:2020))),
+nrow(subset(health_worker, year %in% c(1990:2020))),
+nrow(subset(red_list, year %in% c(1990:2020))),
+nrow(subset(poverty, year %in% c(1990:2020))),
+nrow(subset(life_expectancy, year %in% c(1990:2020))),
+nrow(subset(income, year %in% c(1990:2020))),
+nrow(subset(income_share_20, year %in% c(1990:2020))),
+nrow(subset(CO2, year %in% c(1990:2020))),
+nrow(subset(murder, year %in% c(1990:2020)))
+)
+
+
 zero_or_below <- c(
 (min(women_in_parliament$value, na.rm = TRUE) <= 0),
 (min(basic_sanitation$value, na.rm = TRUE) <= 0),
@@ -273,8 +316,8 @@ zero_or_below <- c(
 
 dp_per_year <- datapoints / (latest - earliest)
 
-overview <- data.frame(titles, earliest, latest, datapoints, dp_per_year, zero_or_below)
-overview[order(overview$dp_per_year, decreasing = TRUE),]
+overview <- data.frame(titles, earliest, latest, dps_1990_2020, datapoints, dp_per_year, zero_or_below)
+overview[order(overview$dps_1990_2020, decreasing = TRUE),]
 ```
 
 Using data sets that have values of 0 or less might be an issue later on
@@ -315,13 +358,121 @@ Data sets that (as of now) look very promising:
 
 -   CO2
 
-## Attempt 4
+## Attempt 6 - 5 data sets
+
+| Input           | Output          |
+|-----------------|-----------------|
+| electricity     | life_expectancy |
+| employment_rate | income          |
+|                 | CO2             |
+
+**Merge data**
+
+```{r}
+all_data <- list(
+  electricity,
+  employment_rate,
+  CO2,
+  life_expectancy,
+  income
+
+)
+
+final_6 <- all_data %>% reduce(full_join, by = c("country", "year"))
+
+colnames(final_6) <- c(
+  "country",
+  "year",
+  "electricity",
+  "employment_rate",
+  "CO2",
+  "life_expectancy",
+  "income"
+)
+
+final_6 <- as.data.frame(final_6)
+
+final_6 <- drop_na(final_6)
+
+nrow(final_6)
+```
+
+-\> 2594 DMUs
+
+**Check for 0 values**
+
+```{r}
+min(final_6$CO2)
+```
+
+**Export to csv**
+
+```{r}
+write_csv(final_6, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/final_6.csv")
+```
+
+## Attempt 5 - 5 data sets
+
+| Input         | Output          |
+|---------------|-----------------|
+| electricity   | life_expectancy |
+| health_worker | income          |
+|               | CO2             |
+
+**Merge data**
+
+```{r}
+all_data <- list(
+  electricity,
+  health_worker,
+  CO2,
+  life_expectancy,
+  income
+
+)
+
+final_5 <- all_data %>% reduce(full_join, by = c("country", "year"))
+
+colnames(final_5) <- c(
+  "country",
+  "year",
+  "electricity",
+  "health_worker",
+  "CO2",
+  "life_expectancy",
+  "income"
+)
+
+final_5 <- as.data.frame(final_5)
+
+final_5 <- drop_na(final_5)
+
+nrow(final_5)
+```
+
+-\> 2594 DMUs
+
+**Check for 0 values**
+
+```{r}
+min(final_5$CO2)
+```
+
+**Export to csv**
+
+```{r}
+write_csv(final_5, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/final_5.csv")
+```
+
+## Attempt 4 - 6 data sets
 
 | Input               | Output          |
 |---------------------|-----------------|
 | electricity         | life_expectancy |
 | women_in_parliament | income          |
 | health_worker       | CO2             |
+
+**Merge data**
 
 ```{r}
 all_data <- list(
@@ -359,7 +510,7 @@ nrow(final_4)
 
 -\> 2332 DMUs
 
-### Check for 0 values
+**Check for 0 values**
 
 ```{r}
 min(final_4$women_in_parliament)
@@ -388,121 +539,13 @@ min(final_4$women_in_parliament)
 min(final_4$CO2)
 ```
 
-```{r}
-final_4$dmu <- str_c(final_4$country, "_", final_4$year)
-final_4$country <- NULL
-final_4$year <- NULL
-final_4 <- final_4 %>% relocate(dmu)
-```
-
-### DEA - Attempt 3
+Export to csv
 
 ```{r}
-
-# Documentation: https://cran.r-project.org/web/packages/deaR/deaR.pdf
-
-# Number of in- and outputs
-number_of_inputs <- 3
-number_of_outputs <- 3
-
-orientation <- "io"
-# io: input oriented
-# oo: output oriented
-
-return_to_scale <- "vrs"
-# crs: constant return to scale
-# vrs: variable return to scale
-# nirs: non-increasing
-# ndrs: non-decreasing
-# grs: generalized
-
-
-model_data <- read_data(final_4, ni=number_of_inputs, no=number_of_outputs, dmus = 1)
-
-
-result_4 <- model_basic(model_data, orientation = orientation, rts=return_to_scale)
-
+write_csv(final_4, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/final_4.csv")
 ```
 
-Calculate efficiencies and target values
-
-```{r}
-# Efficiencies
-eff <- as.data.frame(efficiencies(result_4))
-# add column for dmu names
-eff$dmu <- rownames(eff)
-# delete rownames
-rownames(eff) <- NULL
-# Rename efficiency column
-colnames(eff)[1] <- "efficiencies"
-
-# get targets
-targets <- as.data.frame(targets(result_4))
-# add column for dmu names
-targets$dmu <- rownames(targets)
-# delte rownames
-rownames(targets) <- NULL
-```
-
-Merge efficiencies, targets and the original data into one data fram
-
-```{r}
-data_and_results <- list(
-  final_4,
-  eff,
-  targets
-)
-
-data_dea_4 <- data_and_results %>% reduce(full_join, by="dmu")
-```
-
-Relocate the efficiencies column
-
-```{r}
-data_dea_4 <- data_dea_4 %>% relocate(efficiencies, .after = dmu)
-```
-
-Separate the DMU column into country and year but keep the dmu column
-
-```{r}
-data_dea_4 <- separate(data_dea_4, dmu, c("country", "year"), "_", remove=FALSE)
-```
-
-Add the continent to each DMU
-
-```{r}
-data_dea_4$continent <- countrycode(sourcevar = data_dea_4$country,
-                               origin = "country.name",
-                               destination = "continent")
-```
-
-### Visualization
-
-```{r}
-data_dea_4 %>%
-  filter(continent == "Africa") %>%
-  ggplot(aes(year, efficiencies))+
-  geom_point(aes(
-    # color=country
-  )
-  )+
-  theme(axis.text.x=element_text(angle = -90, hjust = 0))
-```
-
-```{r}
-data_dea_4 %>%
-  # filter(continent == "Africa") %>%
-  ggplot(aes(continent, efficiencies))+
-  geom_boxplot()+
-  geom_jitter(width = 0.1,
-              alpha = 0.5,
-              # aes(
-              #   color=year
-              #   )
-              )
-```
-
-## Attempt 3
+## Attempt 3 - 8 data sets
 
 | Input               | Output          |
 |---------------------|-----------------|
@@ -510,6 +553,8 @@ data_dea_4 %>%
 | forest_area         | income          |
 | women_in_parliament | CO2             |
 | health_worker       | employment_rate |
+
+**Merge data**
 
 ```{r}
 all_data <- list(
@@ -547,7 +592,7 @@ nrow(final_3)
 
 -\> 2201 DMUs
 
-### Check for 0 values
+**Check for 0 values**
 
 ```{r}
 min(final_3$women_in_parliament)
@@ -570,151 +615,22 @@ Assign very low values where values are 0
 final_3[final_3 == 0] <- 0.0001
 ```
 
-```{r}
-min(final_3$women_in_parliament)
-min(final_3$forest_area)
-# min(final$mean_years_in_school)
-# min(final$poverty)
-min(final_3$CO2)
-```
+**Export to csv**
 
 ```{r}
-final_3$dmu <- str_c(final_3$country, "_", final_3$year)
-final_3$country <- NULL
-final_3$year <- NULL
-final_3 <- final_3 %>% relocate(dmu)
+write_csv(final_3, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/final_3.csv")
 ```
 
-### DEA - Attempt 3
-
-```{r}
-
-# Documentation: https://cran.r-project.org/web/packages/deaR/deaR.pdf
-
-# Number of in- and outputs
-number_of_inputs <- 4
-number_of_outputs <- 4
-
-orientation <- "io"
-# io: input oriented
-# oo: output oriented
-
-return_to_scale <- "vrs"
-# crs: constant return to scale
-# vrs: variable return to scale
-# nirs: non-increasing
-# ndrs: non-decreasing
-# grs: generalized
-
-
-model_data <- read_data(final_3, ni=number_of_inputs, no=number_of_outputs, dmus = 1)
-
-
-result_3 <- model_basic(model_data, orientation = orientation, rts=return_to_scale)
-
-```
-
-Calculate efficiencies and target values
-
-```{r}
-# Efficiencies
-eff <- as.data.frame(efficiencies(result_3))
-# add column for dmu names
-eff$dmu <- rownames(eff)
-# delete rownames
-rownames(eff) <- NULL
-# Rename efficiency column
-colnames(eff)[1] <- "efficiencies"
-
-# get targets
-targets <- as.data.frame(targets(result_3))
-# add column for dmu names
-targets$dmu <- rownames(targets)
-# delte rownames
-rownames(targets) <- NULL
-```
-
-Merge efficiencies, targets and the original data into one data fram
-
-```{r}
-data_and_results <- list(
-  final_3,
-  eff,
-  targets
-)
-
-data_dea_3 <- data_and_results %>% reduce(full_join, by="dmu")
-```
-
-Relocate the efficiencies column
-
-```{r}
-data_dea_3 <- data_dea_3 %>% relocate(efficiencies, .after = dmu)
-```
-
-Seperate the DMU column into country and year but keep the dmu column
-
-```{r}
-data_dea_3 <- separate(data_dea_3, dmu, c("country", "year"), "_", remove=FALSE)
-```
-
-Add the continent to each DMU
-
-```{r}
-data_dea_3$continent <- countrycode(sourcevar = data_dea_3$country,
-                               origin = "country.name",
-                               destination = "continent")
-```
-
-### Visualization
-
-```{r}
-data_dea_3 %>%
-  filter(continent == "Africa") %>%
-  ggplot(aes(year, efficiencies))+
-  geom_point(aes(
-    # color=country
-  )
-  )+
-  theme(axis.text.x=element_text(angle = -90, hjust = 0))
-```
-
-```{r}
-data_dea_3 %>%
-  # filter(continent == "Africa") %>%
-  ggplot(aes(continent, efficiencies))+
-  geom_boxplot()+
-  geom_jitter(width = 0.1,
-              alpha = 0.5,
-              # aes(
-              #   color=year
-              #   )
-              )
-```
-
-## Attempt 2
+## Attempt 2 - 8 data sets
 
 In this attempt we try to cover only 8 dimensions in total.
 
-**Input:**
-
--   women_in_parliament
-
--   electricity
-
--   CO2
-
--   mean_years_in_school
-
-**Output:**
-
--   life_expectancy
-
--   income
-
--   income_share_20
-
--   employment_rate
+| Input                | Output          |
+|----------------------|-----------------|
+| women_in_parliament  | life_expectancy |
+| electricity          | income          |
+| CO2                  | income_share_20 |
+| mean_years_in_school | employment_rate |
 
 ```{r}
 all_data <- list(
@@ -746,7 +662,7 @@ final <- as.data.frame(final)
 final <- drop_na(final)
 ```
 
-### Check for 0 values
+Check for 0 values
 
 ```{r}
 min(final$women_in_parliament)
@@ -769,6 +685,8 @@ final <- subset(final, CO2>0)
 ```{r}
 nrow(final)
 ```
+
+1271 DMUs -\> Very few
 
 ## Attempt 1 - All data sets
 
